kubernetes/know-it-all.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: know-it-all
  name: know-it-all
spec:
  replicas: 1
  selector:
    matchLabels:
      app: know-it-all
  template:
    metadata:
      labels:
        app: know-it-all
    spec:
      containers:
      - env:
        - name: TS3_SERVER
          valueFrom:
            secretKeyRef:
              name: know-it-all-secret
              key: ts3-server
        - name: TS3_USERNAME
          valueFrom:
            secretKeyRef:
              name: know-it-all-secret
              key: ts3-username
        - name: TS3_PASSWORD
          valueFrom:
            secretKeyRef:
              name: know-it-all-secret
              key: ts3-password
        - name: SLACK_API_TOKEN
          valueFrom:
            secretKeyRef:
              name: know-it-all-secret
              key: slack-api-token
        - name: GOOGLE_API_KEY
          valueFrom:
            secretKeyRef:
              name: know-it-all-secret
              key: google-api-key
        - name: STEAM_API_KEY
          valueFrom:
            secretKeyRef:
              name: know-it-all-secret
              key: steam-api-key
        image: oxisto/know-it-all
        imagePullPolicy: Always
        name: know-it-all
      imagePullSecrets:
      - name: registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: know-it-all
spec:
  ports:
  - port: 4300
    protocol: TCP
    targetPort: 4300
  selector:
    app: know-it-all
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: know-it-all
spec:
  rules:
  - host: know-it-all.aybaze.com
    http:
      paths:
      - backend:
          serviceName: know-it-all
          servicePort: 4300
        path: /
  tls:
  - hosts:
    - know-it-all.aybaze.com
    secretName: know-it-all-tls
